# iRangeGraph_Muti-Attribute

./: README.md
include/: iRG_search_lex.h  iRG_search_multi.h  iRG_search_multi_interval.h  iRG_search_zorder.h  utils.h  utils_multi.h  z_order.h
tests/: CMakeLists.txt  lex.cpp  search_multi_attribute_lex_and.cpp  search_multi_attribute_lex_or.cpp  search_multi_attribute_zorder_and.cpp  search_multi_attribute_zorder_or.cpp  search_multi_interval.cpp  zorder.cpp
